change paths to relative

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
     <script type="importmap">
       {
         "imports": {
-          "three": "/three/build/three.module.js"
+          "three": "./three/build/three.module.js"
         }
       }
     </script>
 
-		<script type="module" src="body.js">
+		<script type="module" src="./body.js">
 		</script>
     
     <div class="over" id="instructions">
